--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "bcrypt-nodejs": "0.0.3",
     "jwt-simple": "^0.5.1",
     "lodash": "^3.10.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
