--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
-    "redux-form": "^6.4.3"
+    "redux-form": "^6.4.3",
+    "redux-thunk": "^2.2.0"
   }
 }
