--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
+    "babel-core": "6.22.1",
+    "babel-loader": "6.2.10",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.22.0",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
     "eslint": "^3.14.0",
@@ -25,24 +25,26 @@
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
     "remote-redux-devtools": "^0.5.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2"
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-preset-stage-1": "^6.1.18",
+    "babel-preset-stage-1": "6.22.0",
     "bcrypt-nodejs": "0.0.3",
     "jwt-simple": "^0.5.1",
-    "lodash": "^3.10.1",
+    "konva": "^1.3.0",
+    "lodash": "4.17.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-konva": "^1.1.1",
+    "react-redux": "5.0.2",
+    "react-router": "3.0.2",
     "redux": "^3.6.0",
-    "redux-form": "^6.4.3",
+    "redux-form": "^6.5.0",
     "redux-thunk": "^2.2.0"
   }
 }
