--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
+    "react-hot-loader": "^1.3.1",
     "remote-redux-devtools": "^0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2"
@@ -39,10 +40,12 @@
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "react": "15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.2",
     "react-konva": "^1.1.1",
     "react-redux": "5.0.2",
     "react-router": "3.0.2",
+    "react-router-bootstrap": "^0.23.1",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
     "redux-thunk": "^2.2.0"
