--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
+    "babel-preset-stage-0": "6.22.0",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
     "eslint": "^3.14.0",
@@ -27,7 +28,8 @@
     "react-hot-loader": "^1.3.1",
     "remote-redux-devtools": "^0.5.7",
     "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2"
+    "webpack-dev-server": "1.16.2",
+    "webpack-hot-middleware": "^2.16.1"    
   },
   "dependencies": {
     "axios": "^0.15.3",
