--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-0": "6.22.0",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "css-loader": "^0.26.1",
     "eslint": "^3.14.0",
     "eslint-plugin-react": "^6.9.0",
     "jquery": "^2.2.1",
@@ -27,6 +28,7 @@
     "react-addons-test-utils": "^0.14.7",
     "react-hot-loader": "^1.3.1",
     "remote-redux-devtools": "^0.5.7",
+    "style-loader": "^0.13.1",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-hot-middleware": "^2.16.1"
@@ -35,19 +37,21 @@
     "axios": "^0.15.3",
     "babel-preset-stage-1": "6.22.0",
     "bcrypt-nodejs": "0.0.3",
+    "bootstrap": "^4.0.0-alpha.6",
+    "classnames": "^2.2.5",
     "jwt-simple": "^0.5.1",
-    "konva": "^1.3.0",
     "lodash": "4.17.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "react": "15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.2",
-    "react-konva": "^1.1.1",
     "react-redux": "5.0.2",
     "react-router": "3.0.2",
     "react-router-bootstrap": "^0.23.1",
+    "reactstrap": "^4.1.1",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
     "redux-thunk": "^2.2.0"
