--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.14.0",
     "mongoose": "^4.7.7",
     "morgan": "^1.7.0",
+    "mssql": "^3.3.0",
     "nodemon": "^1.11.0"
   }
 }
