--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,19 @@
 {
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Process",
+            "processId": "${command.PickProcess}",
+            "port": 5858
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Port",
+            "port": 3090
+        },
         {
             "name": "Launch Chrome against localhost",
             "type": "chrome",
