--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "reactstrap": "^4.1.1",
     "redux": "^3.6.0",
     "redux-form": "^6.5.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io": "1.7.2"
   }
 }
