--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "nodemon --debug index.js 3090"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,10 @@
     "mongoose": "^4.7.7",
     "morgan": "^1.7.0",
     "mssql": "^3.3.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "socket.io": "^1.7.2"
+  },
+  "devDependencies": {
+    "node-inspector": "^0.12.8"
   }
 }
