--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-burger-menu": "^1.10.12",
     "react-dom": "15.4.2",
     "react-redux": "5.0.2",
     "react-router": "3.0.2",
