--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "passport-local": "^1.0.0",
     "react": "15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-burger-menu": "^1.10.12",
     "react-dom": "15.4.2",
