--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --debug index.js 3090"
+    "start": "nodemon --inspect index.js 3090"
   },
   "author": "",
   "license": "ISC",
