--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-addons-transition-group": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-table": "^3.1.2",
     "react-burger-menu": "^1.10.12",
     "react-dom": "15.4.2",
     "react-redux": "5.0.2",
