--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "mongoose": "^4.7.7",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.7.0",
     "mssql": "^3.3.0",
     "nodemon": "^1.11.0",
